FSA-100: safari alignment fix, pagetitle js fix

--- a/drupal/web/themes/custom/fsa/src/css/node-teaser.css
+++ b/drupal/web/themes/custom/fsa/src/css/node-teaser.css
@@ -120,6 +120,7 @@
   width: 1em;
   height: 1em;
   transform: rotate(-90deg);
+  margin-left: auto;
 }
 
 .node-teaser__read-more-content {
